# pyruicore

./: .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
data_class/: field.py
data_class/model/: base.py  meta.py
data_type/: __init__.py  analysis.py  basic.py  udf.py  util.py
pyruicore/: __init__.py  field.py
pyruicore/data_type/: __init__.py  analysis.py  basic.py  const.py  udf.py  util.py
pyruicore/model/: __init__.py  base.py  meta.py
test/: test.py
tests/: test_model.py
