[tool.poetry]
name = "pyruicore"
version = "0.1.3"
description = "load python dict data to python class"
authors = ["ruicore <hrui835@gmail.com>"]
license = "MIT"
homepage = "https://github.com/RuiCoreSci/pyruicore"
repository = "https://github.com/RuiCoreSci/pyruicore"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
skip_gitignore = true
line_length = 100
indent = '    '
no_lines_before = "LOCALFOLDER"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
